@startuml

title __HANDLERIPC's Class Diagram__\n

  namespace com.itbird {
    namespace handlerIPC {
      class com.itbird.handlerIPC.HandleIPCMusicPlayService {
          ~ TAG : String
          + onBind()
          + onCreate()
          + onDestroy()
      }
    }
  }
  

  namespace com.itbird {
    namespace handlerIPC {
      class com.itbird.handlerIPC.HandleIPCTestActivity {
          ~ serviceConnection : ServiceConnection
          {static} - TAG : String
          # onCreate()
          # onDestroy()
          # onNewIntent()
      }
    }
  }
  

  com.itbird.handlerIPC.HandleIPCMusicPlayService -up-|> android.app.Service
  com.itbird.handlerIPC.HandleIPCTestActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
